@@ -20,11 +20,13 @@ DIST gitlab-ce-8.16.8.tar.gz 20907499 SHA256 b6ca6aebb5facb7b0bf792ac36fa6643098
 DIST gitlab-ce-8.17.4.tar.gz 22825573 SHA256 daa0d5d75295a896f7aa230bd965e12e8525a52c96ec0456ee405d083180e091 SHA512 4d9244c2575e8c4e26515ef55e478b459b24f3d53426a8d2e7cd253a879c9ae2a770e92e0e4a74cc88242b5b3ec81f6081c789426553ee9c8ff161abd138fb45 WHIRLPOOL a3131dc319b4aaa98c81c2c5104672363f16fb393ee0f21e8be670c9df6788c383f5fba8459352a37b49467f42307a1be291eff5b9d550390df04d9004514986
 DIST gitlab-ce-9.0.0_rc4.tar.gz 26270878 SHA256 f47ddcf6f4f0336228dd1ef03085c9ea6116157887e8216038d23b69cf7a4d89 SHA512 f4694ebf4ffe38e6c5495f3658eb8003d28b3ac5d67f4533ddc1932afca412a40ea786cd8d99e2891fdf9bacd7b198b29493b97d6d02455d4f4139d4e60a0d63 WHIRLPOOL 81f47820043445e9ff69ae0ad3bcd1e094ab1e3527eec279096ae16a767cec5451b2d94af4dd87cd2939eb2e64368a1a0e543ce40e0e9fd5a716eeef04741c54
 DIST gitlab-ce-9.0.1.tar.gz 26350693 SHA256 94549d69650383347256b9f3f0c11f200e0e4f29118a54a99e137d895db083ed SHA512 b7eed360beab1459da5c56b911e527335f2ec7bf595649c8d0327255488d765971a612987d7b3d10f2b017bf93adfb52f739a20c6d3e251552d82f04ddcf1bea WHIRLPOOL e061946cf9831daa61809b14d71e907717e0840cc8263b5461813795871cd2bd479ddff0d3c4afeda06edfca9f819c333e0be1a0961a1dbf9c86c9d8e0315ee1
+DIST gitlab-ce-9.0.2.tar.gz 26349628 SHA256 2b8913a1ed5f49c59314ce1aa5874d917d38c3c663a981aac3374ced8a123629 SHA512 563450eb22dc2eb7d8aec52b7fb2ec58339bf59f0b46e59fa2a98ff8e2634d95948b9872afc1e64bff840985ed15b8efd588661f075c27cdb984c125ea41624e WHIRLPOOL 3660dde5cadb279f48d2c43e4fb3ba47b7d7a07c38e25940d55b8cb8bf4d750ca97088db73d1f808b3ff5ef8b3867d45ec0289e1ff1e0c5e362994ed38fc9eb9
 EBUILD gitlab-ce-8.15.8.ebuild 11982 SHA256 755bfd6fa532a308d3f458db1456f8de4f2c5f599ab76c18653aad9e038d0697 SHA512 9aa439da7dc61687f1cdce5ff693dd1c8c4edc54aaed288ad0368aa1b64d577a7f3752dee149c200c4d98b43a6347c77251cac9f6d3316b5a6d799a17c3ed583 WHIRLPOOL 02393bfd983341632663096e8b293e3611ac5328a58a50a1c7e800e348e866f37aff53ebe447507a84d5966e019265fde94a30716f43b50228437e04abcd932c
 EBUILD gitlab-ce-8.16.8.ebuild 11982 SHA256 31537d4a6aeb9ff14ab14c9a27dca51a056e94ee75506ad855a1289f32468694 SHA512 01d536fcfb53a7b39943314a34eeeb9c5b5660604a2fb1a1c2dcd1d7e87d19ab0bbc5bc650feaa1db812047c3783a324d7c8a8bce7dd7381033c3d1ca2e64828 WHIRLPOOL 0f3402e30164ee6d5058c51554cc916d91d5975f438074e3193bf3bdb4e323bca4279c19f00cd7bacd01c2eb6cf13e41a0badabd958e9be58d319224f53403b0
 EBUILD gitlab-ce-8.17.4.ebuild 12928 SHA256 f748d42058293ba4f593fbb36be34ecde332d896d04c610fd3b7e91288c18fbb SHA512 3c2736f9b7df066bb105faffef6ce2b6276fe60a686a7462c630a1b7c7c0296d94e33c7ea25a9f24aa814628f318e2430a3e5ca149783c86ef3fb1132dd01877 WHIRLPOOL cd629ba993df3eaef9c9ec1bf1649aa4cfea5f3787d2207a7016c092bff67175d79c6782d643d4c80b3b5971a98858feaa279a184abc4fd936c7e5c8b291dd28
 EBUILD gitlab-ce-9.0.0_rc4.ebuild 12910 SHA256 8851160b4454845fb33ce0b9a9dd3e070bed07d3a0e5c5f753c77b0ef301ded0 SHA512 9d109a3ea8fa7a7bb33440b4b21bf988745c4eefb62b834ad88825f3ffa28881eceaf402ec09241b74d91e778258c1a18daae6c86254625af4f54bf6189b32f2 WHIRLPOOL 67aa480b4cf1209a3d7af3bffb1f7f774bf2c6d18bf40960478e13459813ebb9472adc5aec3b84252157b0c3e74f9e7f74cb0d57395983c02ba4c976ffae106f
 EBUILD gitlab-ce-9.0.1-r1.ebuild 13083 SHA256 4340c7e3edf6b4aa69693c88f64310dd69c6079c2188dfc6ba891f26c29a5409 SHA512 be832c77b4d60f04e4f328563d30877cec03aea84aaa41daa989c67c0db7ac0a3b91ca2339b07c91785b618b2d3f636566b0625c52134ef06f02c21486e2abdb WHIRLPOOL 30488fba1af1a5892ae06a56a9aa3d7adfa8d7a5afe3dac9f333f98ea4b8557fdbe145cf60ab2d88e6b3fc6477e08c80e1cd554a0888a21a7d5a9d89e1970721
+EBUILD gitlab-ce-9.0.2.ebuild 13083 SHA256 7700b86831474e92fe01938f36bf7482c4748aca78a3f5489731810ce1cc66e2 SHA512 a522c6659f927eac589f31a3f392c6a367123a55ef6f887d15440c8e90290f2aa5b9e5beb523a3e06dfad7183a9fad269eb1a88a202721604cc680e040f1d3b4 WHIRLPOOL 94948ab3c1a169a96c6300f212c00a331550d12605422d4327e5d364dfebc799fc6e0e6db7ecc3ddba36da8278cf7e065e919b90a14181e7e2ca68da4f9e81d2
 EBUILD gitlab-ce-9999.ebuild 13025 SHA256 606c38870f5edcb11b2fc99e2b2a4bb045f677cd57c0985e09beabb4fa5591fe SHA512 f4a4c35bc4655908199a6ac9cc2b03c05353a2ca129c50c99fd7063ff5a4008766582ffa131e22cc068b430b01e86e90b0500a6e5721e54142a78f9fc0408e12 WHIRLPOOL db7ef4a9d86c046616c6b94c535851be341a1027765653e33ca3761ca0cc551f8179f1f2ced229b7af7908243ef7b3558c3fad6090458777df5581f9900eb5d5
-MISC ChangeLog 17518 SHA256 8fc06998bba426547bd4027cc2217e24abd0d1eebd122b3928deaf356fc70a5b SHA512 bcdcc0dac06137d96e086d76b88c135aec477d08f47092cfff4fb8d85d95a562506ceb4a385dd5d697e1e743620f1eac8854b5df975a5bc5727a195e28d274a8 WHIRLPOOL 29c7d7d419c67bd7a3ad0f5c2b54685f8fd7d3ccf78a0928ed0a347ffa3ed358028721b81fccc8b009c00ac5b3aa8a6101520caba41fe9b88b8852ae1cafc59d
+MISC ChangeLog 17683 SHA256 0c901201146eafebc9aabeba818a5637bb8ad4374b582507ec7761eb3cf094ea SHA512 ae1a44f421aaf5c5a99d2ae43072d233e44f3975e2df82276e9fc5fc5f862cfa8392bb9229e415770cdd9a4e885960447622570e6bd1626c487acaf41a7351ad WHIRLPOOL d256f4ecadd1c992420212d1df85251fd799d8296dcb884cd728322da3dfd728cc755c75ebbbaf0b75fdf8c136752a2f95c9a1361a7b0f79089e25e9e7c3f6cd
 MISC metadata.xml 801 SHA256 3dc7486a12903f47f65968d524c93500ba30a4a09fa57e5a9dacf356509b44bb SHA512 e132754b72e64246531fa883400a0cf1a473ac5a6a49623db58ccf118a038b7cf37df03d9550f37b4a25f9ddbb1dcc5652ec9a4f2259d8e3ce202692c4025f41 WHIRLPOOL e9d961681fd790008eaf80fa07ce2c55a00a58f2e920d759793783ca8c8f508602a777e94c0cb65fe87c7dbef0cabdf26e4f4082584421097d939cbab20c4ac6
