@@ -1,3 +1,8 @@
+*gitlab-ce-9.0.2 (30 Mar 2017)
+
+  30 Mar 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.0.2.ebuild:
+  www-apps/gitlab-ce:  added ebuild for Gitlab CE 9.0.2
+
   30 Mar 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9999.ebuild:
   www-apps/gitlab-ce:  brought the ebuild for the GIT version (9999) u pto speed
   in terms of dependencies.
